--- a/categories.html
+++ b/categories.html
@@ -4,21 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Choose Categories · Nova</title>
-  <link rel="stylesheet" href="assets/css/style.css?v=H94j">
+  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
 </head>
 <body>
+  <div class="header"><a href="index.html">← Back to Welcome</a><nav><a href="reset.html">Reset</a></nav></div>
   <main class="wrap">
     <h1>Choose Your Categories</h1>
     <div class="card">
-      <p class="small">Pick a few that resonate. This step must happen before Traits.</p>
-      <div id="catGrid" class="grid"></div>
+      <p>Think of these as <em>arenas of energy</em> — spaces where your strengths naturally come alive. Choose the places where you’ve felt most alive — not simply what’s on your résumé. There are no wrong choices; these are the lenses through which Nova will look at your traits.</p>
+      <div class="notice">Select <strong>2–4</strong> to give Nova a clearer reading.</div>
+      <div id="catGrid" class="grid" style="margin-top:12px"></div>
       <div class="bar">
-        <a class="btn" href="index.html">Back</a>
+        <a class="btn btn-ghost" href="index.html">Back</a>
         <button id="categoriesNextBtn" class="btn" disabled>Next: Traits</button>
       </div>
     </div>
-    <div class="notice small">H94j — Categories must be completed in this session to proceed.</div>
+    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
   </main>
-  <script src="assets/js/categories.js?v=H94j"></script>
+  <script src="assets/js/categories.js?v=H95b"></script>
 </body>
 </html>
