--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Welcome to Nova</title>
-  <link rel="stylesheet" href="assets/css/style.css?v=H94j">
+  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
 </head>
 <body>
+  <div class="header">
+    <span>Nova</span>
+    <nav>
+      <a href="index.html">Home</a> • <a href="reset.html">Reset</a>
+    </nav>
+  </div>
   <main class="wrap">
     <h1>Welcome to Nova</h1>
-    <p class="lead">This experience takes about <strong>2–5 minutes</strong> to complete.</p>
     <div class="card">
       <p class="small"><strong>89%</strong> of people do not know their purpose.</p>
-      <p class="small">Nova helps surface the work that fits your mind, heart, drive, and spirit.</p>
+      <p class="small">You were designed with purpose. Nova doesn’t create it — she reveals it. In the next few minutes, you’ll walk through choices that mirror your mind, heart, drive, and spirit. By the end, you’ll see a reflection of how you’re wired to make impact.</p>
+      <div class="notice">This journey takes about <strong>2–5 minutes</strong>. Take your time — clarity is worth it.</div>
       <div class="bar">
         <a id="startJourneyBtn" class="btn" href="categories.html">Start My Journey</a>
       </div>
     </div>
-    <div class="notice small">H94j Frontend Rebuild — 2025-10-08 19:09</div>
-    <footer>Nova v9.4j — Discover Purpose. Live It Boldly.</footer>
+    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
   </main>
-  <script src="assets/js/welcome.js?v=H94j"></script>
+  <script src="assets/js/welcome.js?v=H95b"></script>
 </body>
 </html>
