--- a/traits.html
+++ b/traits.html
@@ -4,21 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Select Traits · Nova</title>
-  <link rel="stylesheet" href="assets/css/style.css?v=H94j">
+  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
 </head>
 <body>
+  <div class="header"><a href="categories.html">← Back to Categories</a><nav><a href="reset.html">Reset</a></nav></div>
   <main class="wrap">
     <h1>Select Your Traits</h1>
     <div class="card">
-      <p class="small">Start clean each run. If you see anything pre-selected, this page will clear it.</p>
-      <div id="traitsGrid" class="grid"></div>
+      <p>These traits describe how you actually operate when you’re at your best. Choose qualities you’ve demonstrated consistently — not what you wish you had. Each trait helps Nova recognize patterns and point to work that fits the real you.</p>
+      <div class="notice">Select up to <strong>12</strong>. You can refine later; for now, focus on what feels true.</div>
+      <div id="traitsGrid" class="grid" style="margin-top:12px"></div>
       <div class="bar">
-        <a class="btn" href="categories.html">Back</a>
+        <a class="btn btn-ghost" href="categories.html">Back</a>
         <a id="toReflection" class="btn" href="reflection_look_forward.html">Next: Reflection</a>
       </div>
     </div>
-    <div class="notice small">H94j — Traits guarded; redirected to Categories unless completed this session.</div>
+    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
   </main>
-  <script src="assets/js/traits.js?v=H94j"></script>
+  <script src="assets/js/traits.js?v=H95b"></script>
 </body>
 </html>
