--- a/invest.html
+++ b/invest.html
@@ -1,18 +1,62 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>NOVA · Invest in Yourself</title>
-<link rel="stylesheet" href="assets/css/style.css"/></head><body>
-<div class="wrap">
-  <h1>Invest in Yourself — Because Purpose Deserves Momentum</h1>
-  <div class="small">Nova — Discover Purpose. Live It Boldly.</div>
-  <div class="card"><p class="small">You’ve seen your purpose and reflected on the change you need. Now give that clarity direction. <b>Nova + Navi</b> offer levels of support — choose the step that matches where you are.</p></div>
-  <div class="pricing">
-    <div class="tier"><h2>Starter</h2><div class="price">$29.99 / month</div><ul class="small"><li>Nova discovery + Role Reveal</li><li>Basic résumé builder & job suggestions</li><li>Weekly “next step” prompts</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Starter</a></div>
-    <div class="tier"><h2>Pro</h2><div class="price">$99 / month</div><ul class="small"><li>Everything in Starter</li><li>AI résumé rewrite & role tailoring</li><li>Company insights & search filters</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Pro</a></div>
-    <div class="tier"><h2>Mastery</h2><div class="price">$149 / month</div><ul class="small"><li>Everything in Pro</li><li>1:1 coaching + career roadmap PDF</li><li>Quarterly masterclass & accountability</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Mastery</a></div>
-    <div class="tier"><h2>Purpose Book</h2><div class="price">One-Time</div><ul class="small"><li>30-day guided prompts</li><li>Weekly check-ins & templates</li><li>Practical steps to build momentum</li></ul><a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Get the Purpose Book</a></div>
-  </div>
-  <footer>Nova v9.4d — Discover Purpose. Live It Boldly.</footer>
-</div>
-<script>console.log("Nova v9.4d | Purpose Meets Outlook | Guided Start + Navi Bridge");</script>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Invest in Yourself · Nova</title>
+  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
+  <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
+</head>
+<body>
+  <div class="header"><a href="reflection_look_forward.html">← Back to Reflection</a><nav><a href="index.html">Home</a> • <a href="reset.html">Reset</a></nav></div>
+  <main class="wrap">
+    <h1>Invest in Yourself</h1>
+    <div class="card">
+      <p>Purpose deserves development. Choose the plan that matches your readiness to grow. Each tier helps you build momentum and turn insight into results.</p>
+    </div>
+    <div class="pricing">
+      <div class="tier">
+        <span class="tag">Starter</span>
+        <h3>Starter</h3>
+        <div class="price">$29.99 / month</div>
+        <ul><li>Nova discovery + Role Reveal</li><li>Basic résumé builder & job suggestions</li><li>Weekly “next step” prompts</li></ul>
+        <div class="payhip-embed">
+          <a href="https://payhip.com/b/GdfU7" class="payhip-buy-button" data-theme="green" data-product="GdfU7" target="_blank" rel="noopener">Choose Starter</a>
+        </div>
+      </div>
+      <div class="tier">
+        <span class="tag">Pro</span>
+        <h3>Pro</h3>
+        <div class="price">$99 / month</div>
+        <ul><li>Everything in Starter</li><li>AI résumé rewrite & role tailoring</li><li>Company insights & search filters</li></ul>
+        <div class="payhip-embed">
+          <a href="https://payhip.com/b/knC1Z" class="payhip-buy-button" data-theme="green" data-product="knC1Z" target="_blank" rel="noopener">Choose Pro</a>
+        </div>
+      </div>
+      <div class="tier">
+        <span class="tag">Mastery</span>
+        <h3>Mastery</h3>
+        <div class="price">$149 / month</div>
+        <ul><li>Everything in Pro</li><li>1:1 coaching + career roadmap PDF</li><li>Quarterly masterclass & accountability</li></ul>
+        <div class="payhip-embed">
+          <a href="https://payhip.com/b/re4Hy" class="payhip-buy-button" data-theme="green" data-product="re4Hy" target="_blank" rel="noopener">Choose Mastery</a>
+        </div>
+      </div>
+      <div class="tier">
+        <span class="tag">Purpose Book</span>
+        <h3>How to Know Your Purpose</h3>
+        <div class="price">$14.99 · one‑time</div>
+        <ul><li>30‑day guided prompts</li><li>Weekly check‑ins & templates</li><li>Practical steps to build momentum</li></ul>
+        <div class="payhip-embed">
+          <a href="https://payhip.com/b/N7LVg" class="payhip-buy-button" data-theme="green" data-product="N7LVg" target="_blank" rel="noopener">Get the Purpose Book</a>
+        </div>
+      </div>
+    </div>
+    <div class="bar">
+      <a class="btn btn-ghost" href="reflection_look_forward.html">← Back</a>
+      <a class="btn" href="plans.html">See All Plans</a>
+    </div>
+    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
+  </main>
+</body>
+</html>
