--- a/reset.html
+++ b/reset.html
@@ -1,7 +1,28 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nova — Reset</title>
-<style>body{background:#0b1e3a;color:#fff;font-family:system-ui;margin:0;display:flex;align-items:center;justify-content:center;height:100vh}.card{max-width:680px;padding:28px;border-radius:12px;background:rgba(255,255,255,.06);box-shadow:0 6px 30px rgba(0,0,0,.35)}h1{margin:0 0 8px}p{opacity:.9;margin:8px 0 0}</style>
-</head><body><div class="card"><h1>Resetting Nova…</h1><p>This page clears saved selections and restarts your session.</p></div>
-<script>(function(){try{localStorage.removeItem('nova_selected_traits');localStorage.removeItem('nova_selected_categories');sessionStorage.clear();}catch(e){}setTimeout(function(){location.replace('index.html');},1200);})();</script>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Nova — Reset</title>
+  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
+</head>
+<body>
+  <div class="header"><a href="index.html">← Back to Welcome</a></div>
+  <main class="wrap">
+    <h1>Resetting Nova…</h1>
+    <div class="card"><p>This page clears saved selections and restarts your session.</p></div>
+    <div class="notice small">You can bookmark this page for QA.</div>
+    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
+  </main>
+<script>
+(function(){
+  try {
+    localStorage.removeItem('nova_selected_traits');
+    localStorage.removeItem('nova_selected_categories');
+    sessionStorage.clear();
+  } catch(e) {}
+  setTimeout(function(){ location.replace('index.html'); }, 1000);
+})();
+</script>
+</body>
+</html>
