--- a/categories.html
+++ b/categories.html
@@ -1,26 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Choose Categories · Nova</title>
-  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
-</head>
-<body>
-  <div class="header"><a href="index.html">← Back to Welcome</a><nav><a href="reset.html">Reset</a></nav></div>
-  <main class="wrap">
-    <h1>Choose Your Categories</h1>
-    <div class="card">
-      <p>Think of these as <em>arenas of energy</em> — spaces where your strengths naturally come alive. Choose the places where you’ve felt most alive — not simply what’s on your résumé. There are no wrong choices; these are the lenses through which Nova will look at your traits.</p>
-      <div class="notice">Select <strong>2–4</strong> to give Nova a clearer reading.</div>
-      <div id="catGrid" class="grid" style="margin-top:12px"></div>
-      <div class="bar">
-        <a class="btn btn-ghost" href="index.html">Back</a>
-        <button id="categoriesNextBtn" class="btn" disabled>Next: Traits</button>
-      </div>
-    </div>
-    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
-  </main>
-  <script src="assets/js/categories.js?v=H95b"></script>
-</body>
-</html>
+<!doctype html><html><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Categories · Nova</title><link rel="stylesheet" href="assets/css/style.css?v=H95c"></head>
+<body><div class="header"><a href="index.html">← Welcome</a> <a href="reset.html">Reset</a></div>
+<main class="wrap"><h1>Choose Your Categories</h1>
+<div class="card"><p>Pick 2–4 areas where your strengths naturally come alive.</p>
+<div id="grid" class="grid"></div>
+<div class="bar"><a class="btn btn-ghost" href="index.html">Back</a><button id="next" class="btn" disabled>Next: Traits</button></div></div>
+<footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer></main>
+<script src="assets/js/categories.js?v=H95c"></script></body></html>
