--- a/traits.html
+++ b/traits.html
@@ -1,26 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Select Traits · Nova</title>
-  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
-</head>
-<body>
-  <div class="header"><a href="categories.html">← Back to Categories</a><nav><a href="reset.html">Reset</a></nav></div>
-  <main class="wrap">
-    <h1>Select Your Traits</h1>
-    <div class="card">
-      <p>These traits describe how you actually operate when you’re at your best. Choose qualities you’ve demonstrated consistently — not what you wish you had. Each trait helps Nova recognize patterns and point to work that fits the real you.</p>
-      <div class="notice">Select up to <strong>12</strong>. You can refine later; for now, focus on what feels true.</div>
-      <div id="traitsGrid" class="grid" style="margin-top:12px"></div>
-      <div class="bar">
-        <a class="btn btn-ghost" href="categories.html">Back</a>
-        <a id="toReflection" class="btn" href="reflection_look_forward.html">Next: Reflection</a>
-      </div>
-    </div>
-    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
-  </main>
-  <script src="assets/js/traits.js?v=H95b"></script>
-</body>
-</html>
+<!doctype html><html><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Traits · Nova</title><link rel="stylesheet" href="assets/css/style.css?v=H95c"></head>
+<body><div class="header"><a href="categories.html">← Categories</a> <a href="reset.html">Reset</a></div>
+<main class="wrap"><h1>Select Your Traits</h1>
+<div class="card"><p>Choose traits you’ve demonstrated consistently. Up to 12.</p>
+<div id="tgrid" class="grid"></div>
+<div class="bar"><a class="btn btn-ghost" href="categories.html">Back</a><a id="go" class="btn" href="reflection_look_forward.html">Next: Reflection</a></div></div>
+<footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer></main>
+<script src="assets/js/traits.js?v=H95c"></script></body></html>
